# drf-confidential

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.dev.txt
drf_confidential/: mixins.py  permissions.py
tests/: settings.py  test_api.py
tests/testapp/: models.py  serializers.py  urls.py  views.py
